[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-request-queue-timeout"
version = "1.0.2"
description = "Django middleware class to quickly dispatch any requests that wait too long in a queue before being processed"
license = {file = "LICENSE.txt"}
readme = "README.md"
dependencies = [
    "django >=2.2, <4"
]
keywords = [
  "django",
  "queue",
  "timeout"
]

[project.optional-dependencies]
dev = [
  "bandit>=1.7.4",
  "coverage[toml]==6.3.2",
  "freezegun~=0.3.15",
  "ipython~=7.15.0",
  "ruff~=0.1.2",
]

[tool.setuptools]
packages = ["rqto"]

[tool.ruff]
extend-exclude = [".heroku"]
extend-select = ["C901"]

[tool.coverage.report]
fail_under = 90
exclude_lines = ["raise NotImplementedError"]
