[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-request-queue-timeout"
version = "1.0.4"
description = "Django middleware class to quickly dispatch any requests that wait too long in a queue before being processed"
license = {file = "LICENSE.txt"}
readme = "README.md"
dependencies = [
    "django >=4.2, <6"
]
keywords = [
  "django",
  "queue",
  "timeout"
]

[project.optional-dependencies]
dev = [
  "bandit>=1.7.4",
  "coverage[toml]==7.13.1",
  "freezegun>=0.3.15,<1.6.0",
  "ipython>=7.15,<9.10",
  "ruff>=0.1.2,<0.15.0",
]

[tool.setuptools]
packages = ["rqto"]

[tool.ruff]
extend-exclude = [".heroku"]
extend-select = ["C901"]

[tool.coverage.report]
fail_under = 90
exclude_lines = ["raise NotImplementedError"]
